--- a/OSPasteBin/Content/Site.css
+++ b/OSPasteBin/Content/Site.css
@@ -1,3 +1,64 @@
 ﻿body {
     font-family:Arial;
+    margin:0px;
+    padding:0px;
+    background:#fbfbfb;
+}
+
+#body {
+    padding:10px;
+}
+/* Listing */
+
+
+/* Input */
+.input .post textarea {
+    width:100%;
+    height:300px;
+}
+
+/* Display */
+
+.main pre {
+    width:99%;
+    display:block;
+    word-wrap:break-word;
+    background:#fff;
+    border: 1px solid #bbb;
+}
+
+ul#menu {
+    float:left;
+    padding-left:0px;
+}
+
+#login {
+    float:right;
+}
+
+#login ul {
+    float:right;
+}
+
+.ribbon {
+    height:40px;
+    background:#000;
+    padding-left:10px;
+}
+
+.ribbon a, .ribbon a:visited, .ribbon a:hover {
+    color:#fff;
+    text-decoration:none;
+    font-weight:bold;
+
+}
+
+.ribbon li {
+    float:left;
+    display:block;
+    padding-right:5px;
+}
+
+#body {
+    clear:both;
 }
