--- a/OSPasteBin/Views/PasteNote/PasteNoteNewEditForm.cshtml
+++ b/OSPasteBin/Views/PasteNote/PasteNoteNewEditForm.cshtml
@@ -1,41 +1,36 @@
 ﻿@model OSPasteBin.BusinessObjects.PasteNote
 
-    <fieldset>
-        <legend>PasteNote</legend>
-
+<div class="input">
         @Html.HiddenFor(model => model.Id)
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Title)
         </div>
-        <div class="editor-field">
+        <div class="title">
             @Html.EditorFor(model => model.Title)
             @Html.ValidationMessageFor(model => model.Title)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Description)
         </div>
-        <div class="editor-field">
+        <div class="description">
             @Html.EditorFor(model => model.Description)
             @Html.ValidationMessageFor(model => model.Description)
         </div>
-
-        <div class="editor-label">
+    
+        <div>
             @Html.LabelFor(model => model.Post)
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Post)
-            @Html.ValidationMessageFor(model => model.Post)
+
+        <div class="post">
+            @Html.TextAreaFor(model => model.Post)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Language)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.Language)
-            @Html.ValidationMessageFor(model => model.Language)
         </div>
-
-    </fieldset>
-
+ </div>
