--- a/OSPasteBin/Views/Shared/_Layout.cshtml
+++ b/OSPasteBin/Views/Shared/_Layout.cshtml
@@ -3,25 +3,26 @@
     <head>
         <meta charset="utf-8" />
         <title>@ViewBag.Title</title>
-        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
     </head>
     <body>
         <header>
             <div class="content-wrapper">
-                <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
-                </div>
-                <div class="float-right">
+                <div class="ribbon">
+
+                    <nav>
+                        <ul id="menu">
+                            <li>@Html.ActionLink("Home", "Notes", "PasteNote")</li>
+                            <li>@Html.ActionLink("New", "New", "PasteNote")</li>
+                        </ul>
+                    </nav>
+
                     <section id="login">
                         @Html.Partial("_LoginPartial")
                     </section>
-                    <nav>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        </ul>
-                    </nav>
+
                 </div>
             </div>
         </header>
@@ -33,5 +34,6 @@
 
         @Scripts.Render("~/bundles/jquery")
         @RenderSection("scripts", required: false)
+
     </body>
 </html>
