--- a/OSPasteBin/Views/Shared/_Layout.cshtml
+++ b/OSPasteBin/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 
                     <nav>
                         <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Notes", "PasteNote")</li>
+                            <li>@Html.ActionLink("Home", "Index", "PasteNote")</li>
                             <li>@Html.ActionLink("New", "New", "PasteNote")</li>
                         </ul>
                     </nav>
