Added Tag Lookup Action Access by /Notes/Tag/Keyword

--- a/OSPasteBin/Views/PasteNote/Raw.cshtml
+++ b/OSPasteBin/Views/PasteNote/Raw.cshtml
@@ -4,4 +4,6 @@
     Layout = null;
 }
 
-@HttpUtility.HtmlDecode( @Model.Post )
+<pre style="word-wrap: break-word; white-space: pre-wrap;">
+    @HttpUtility.HtmlDecode( @Model.Post )
+</pre>
