--- a/OSPasteBin/Views/Shared/_LoginPartial.cshtml
+++ b/OSPasteBin/Views/Shared/_LoginPartial.cshtml
@@ -1,19 +1,15 @@
 ﻿@if (Request.IsAuthenticated) {
-    <text>
-    
-        @Html.ActionLink("My Notes", "MyNotes", "PasteNote")
-            
-
-        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
+    <ul>
+        <li>@Html.ActionLink("My Notes", "MyNotes", "PasteNote")</li>
+        <li>
+            @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
             @Html.AntiForgeryToken()
-
             <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
-            
         }
-    </text>
+        </li>
+    </ul>
 } else {
     <ul>
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
