Application Tagging Implemented

--- a/OSPasteBin/Views/PasteNote/New.cshtml
+++ b/OSPasteBin/Views/PasteNote/New.cshtml
@@ -12,6 +12,21 @@
     
     <p>
         <input type="submit" value="Save" />
-    </p>
-    
+    </p>   
 }
+
+<script src="~/Scripts/jquery-1.7.1.min.js"></script>
+<script>
+    /*
+    $('input[type=submit]').click(
+            function (e) {
+                e.preventDefault();
+
+                var btn = $(this);
+                var form = btn.closest('form');
+                console.log(form.serialize());
+                form.submit()
+            }
+        );
+    */
+</script>
