--- a/OSPasteBin/Views/PasteNote/PasteNoteNewEditForm.cshtml
+++ b/OSPasteBin/Views/PasteNote/PasteNoteNewEditForm.cshtml
@@ -27,10 +27,19 @@
         <div class="post">
             @Html.TextAreaFor(model => model.Post)
         </div>
+    
+        <div>
+            @Html.LabelFor(model => model.Tags)
+        </div>
+
+        <div>
+            <input type="text" name="tags" width="100" />
+        </div>
 
         <div>
             @Html.LabelFor(model => model.Language)
         </div>
+
         <div>
             @Html.DropDownListFor(model => model.Language, new SelectList(OSPasteBin.Models.NewNoteViewModel.Languages, "Value", "Text"))
         </div>
