Added Tagger Plugin

--- a/OSPasteBin/Content/Site.css
+++ b/OSPasteBin/Content/Site.css
@@ -65,3 +65,56 @@ ul#menu {
 #body {
     clear:both;
 }
+
+/* AutoComplete */
+#tagInput {
+            display: block;
+            clear: both;
+        }
+
+        #selectedTags {
+            position: relative;
+        }
+
+        #selectedTags ul {
+            padding: 0px;
+            float: left;
+            position: absolute;
+        }
+
+        #selectedTags li {
+            float: left;
+            margin-left: 10px;
+            padding: 5px;
+            list-style-type: none;
+            background: #ececec;
+            border: 1px solid #000;
+            color: #000;
+        }
+
+        ul.ui-autocomplete {
+            padding-left: 0px;
+            background: #fff;
+        }
+
+        .ui-autocomplete li {
+            list-style-type: none;
+            padding-left: 0px;
+        }
+
+        .ui-helper-hidden-accessible {
+            display: none;
+        }
+
+        .ui-menu-item:hover a, .ui-state-focus {
+            background: #efefef;
+        }
+
+        .ui-selecting {
+            background: #FECA40 !important;
+        }
+
+        .ui-selected {
+            background: #F39814 !important;
+            color: white !important;
+        }
