--- a/OSPasteBin/Views/PasteNote/PasteNoteNewEditForm.cshtml
+++ b/OSPasteBin/Views/PasteNote/PasteNoteNewEditForm.cshtml
@@ -33,7 +33,8 @@
         </div>
 
         <div>
-            <input type="text" name="tags" width="100" />
+            <input type="text" name="tags" width="100" id="tagInput" />
+            <input type="hidden" name="pastenotetags" id="pastenotetags" />
         </div>
 
         <div>
